@startuml

title Class diagram which models relations

package model.class <<folder>> {

	package model.class.class <<folder>> {
		 
		 class A_class {
		  - name : String
		}	
	}
	
	A_class " " - " " A_class
	

	package model.class.relation <<folder>> {
			
			abstract class Relation{
				- title : String
			}
			
			abstract class BinaryRelation{
			}
		
			abstract class BinaryRelationWithoutMultiplicity{
			}
			
			class Generalization {
			}	
		
			(A_class, A_class) .. Relation
			Generalization --|> BinaryRelationWithoutMultiplicity
			BinaryRelationWithoutMultiplicity --|> BinaryRelation
			BinaryRelation --|> Relation
			
		
			abstract class BinaryRelationWithMultiplicity{
			}
			
			class Agregation {
			}
			
			
			class Composition {
			}

			class SimpleRelation {
			}
			
			class Association{
				Association contains a class
			}
			
			
						
		}
		
		SimpleRelation --|> BinaryRelationWithMultiplicity
		Association --|> BinaryRelationWithMultiplicity
		Agregation --|> BinaryRelationWithMultiplicity
		Composition --|> BinaryRelationWithMultiplicity
		BinaryRelationWithMultiplicity --|> BinaryRelation
		
		A_class " " - " " An_Interface
		(A_class, An_Interface) .. Implementation

		class Implementation {
		}
		
		
		
		package model.class.multiplicity <<folder>> {
			Abstract class Multiplicity{
			}
			
			class SingleMultiplicity{
				- value : int
			}	
			
			class DoubleMultiplicity{
				- maxValue : int
			}
			
			class NoMultiplicity{
			}	
		}
		
		SingleMultiplicity --|> Multiplicity
		DoubleMultiplicity --|> SingleMultiplicity
		NoMultiplicity --|> Multiplicity
	
		BinaryRelationWithMultiplicity " " --* "1" Multiplicity
		BinaryRelationWithMultiplicity " " --* "1" Multiplicity
		
		Association " " --* "1" A_class
}



@enduml